Actualize swagger docs
