# docs/swagger.yaml
@@ -274,10 +274,6 @@ paths:
         name: did
         required: true
         type: string
-      - description: Service Type
-        in: query
-        name: service
-        type: string
       - description: '#Fragment'
         in: query
         name: fragmentId
@@ -286,15 +282,67 @@ paths:
         in: query
         name: versionId
         type: string
+      - description: Created of Updated time of DID Document
+        in: query
+        name: versionTime
+        type: string
+      - description: Can transform Verification Method into another type
+        in: query
+        name: transformKey
+        type: string
+      - description: Redirects to Service Endpoint
+        in: query
+        name: service
+        type: string
+      - description: Addition to Service Endpoint
+        in: query
+        name: relativeRef
+        type: string
+      - description: Show only metadata of DID Document
+        in: query
+        name: metadata
+        type: string
+      - description: Filter by ResourceId
+        in: query
+        name: resourceId
+        type: string
+      - description: Filter by CollectionId
+        in: query
+        name: resourceCollectionId
+        type: string
+      - description: Filter by Resource Type
+        in: query
+        name: resourceType
+        type: string
+      - description: Filter by Resource Name
+        in: query
+        name: resourceName
+        type: string
+      - description: Filter by Resource Version
+        in: query
+        name: resourceVersion
+        type: string
+      - description: Get the nearest resource by creation time
+        in: query
+        name: resourceVersionTime
+        type: string
+      - description: Show only metadata of resources
+        in: query
+        name: resourceMetadata
+        type: string
+      - description: Sanity check that Checksum of resource is the same as expected
+        in: query
+        name: checksum
+        type: string
       produces:
       - application/did+ld+json
       - application/ld+json
       - application/did+json
       responses:
         "200":
-          description: OK
+          description: Other parameters returns Resource Dereferencing
           schema:
-            $ref: '#/definitions/types.DidResolution'
+            $ref: '#/definitions/types.ResourceDereferencing'
         "400":
           description: Bad Request
           schema:
